# gemini-cli-voice-extension

./: .gitignore  CONTRIBUTING.md  README.md  biome.json  gemini-extension.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build.yml  publish.yml
audio-capture/: Cargo.toml  README.md  index.d.ts  index.js  package.json
audio-capture/npm/darwin-arm64/: README.md  package.json
audio-capture/npm/darwin-x64/: README.md  package.json
audio-capture/npm/linux-x64-gnu/: README.md  package.json
audio-capture/npm/win32-x64-msvc/: README.md  package.json
audio-capture/src/: capture.rs  lib.rs  normalizer.rs
commands/: voice.toml
policies/: policies.toml
src/: cli.ts  config.ts
src/commands/: auth.ts  devices.ts  transcribe.ts
src/components/: TranscribeUI.tsx
